feature:登录页面新增

--- a/src/style/base/commonClass.scss
+++ b/src/style/base/commonClass.scss
@@ -11,3 +11,16 @@
 .cursorPot:hover{
   cursor: pointer;
 }
+.themeBgColor_light{
+  background: #42B3BE;
+}
+.themeBgColor_disable{
+  background: #42B3BE;
+}
+.themeColor_dark{
+  color:#42B3BE;
+}
+.whiteColor{color: #FFFFFF;}
+.themePaddinglr{
+  padding: 0 2rem;
+}
