fix:登录页面修改

--- a/src/style/base/mixin.scss
+++ b/src/style/base/mixin.scss
@@ -4,9 +4,9 @@
 }
 
 html {
-  font-size: 12px; // 网页基础字体大小
+  // font-size: 12px; // 网页基础字体大小
   width:100%;
-  min-width: 1200px;
+  // min-width: 1200px;
 }
 body {
   margin: 0; // 取消外边距 8px
